# tellor-parachain-integration-tests

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: test.yml
src/: lib.rs  relay_chain.rs  tests.rs
src/parachains/: asset_reserve.rs  evm.rs  mod.rs  oracle_consumer.rs
src/parachains/evm/: mod.rs
src/parachains/evm/contracts/: governance.rs  mod.rs  registry.rs  staking.rs
