[package]
name = "tellor-parachain-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
account = { git = "https://github.com/purestake/moonbeam", rev = "62ddcf21694c5c6875788acfc309cccf0cc857bd" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
ethabi = "18.0.0"
ethereum = "0.14.0"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "tracing-log"] }
xcm-emulator = { git = "https://github.com/shaunxw/xcm-simulator", rev = "bea35c799d725a4233db6b9108ee2ed5bbfc1aed" }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }

# Polkadot
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }

# Moonbeam
pallet-asset-manager = { git = "https://github.com/purestake/moonbeam", rev = "62ddcf21694c5c6875788acfc309cccf0cc857bd" }
pallet-ethereum = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40" }
pallet-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40" }
pallet-xcm = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.40" }

# Tellor
tellor = { git = "https://github.com/tellor-io/tellor-pallet" }

# Runtimes
rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
statemine-runtime = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
moonbase-runtime = { git = "https://github.com/purestake/moonbeam", rev = "62ddcf21694c5c6875788acfc309cccf0cc857bd" }
oracle-consumer-runtime = { package = "parachain-template-runtime", git = "https://github.com/tellor-io/substrate-parachain-node" }

# Patch Moonbeam
[patch."https://github.com/purestake/substrate"]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
frame-support-procedural = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-npos-elections = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-weights = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
[patch."https://github.com/purestake/cumulus"]
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.40" }
[patch."https://github.com/purestake/polkadot"]
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }

# Patch Tellor
[patch."https://github.com/tellor-io/tellor-pallet"]
tellor = { git = "https://github.com/evilrobot-01/tellor-pallet", branch = "frank/update_deps" }